The health page was added

--- a/app/scss/components/_navigation.scss
+++ b/app/scss/components/_navigation.scss
@@ -14,6 +14,11 @@
             font-weight: 500;
             font-size: 1.8rem;
             color: $dark;
+            &_active {
+                pointer-events: none;
+                color: $primary;
+                text-decoration: underline;
+            }
             &:hover {
                 opacity: .85;
             }
