--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -108,7 +108,8 @@ $utilities: map-get-multiple(
   'layout/team-section',
   'layout/text-section',
   'layout/template',
-  'layout/health-template';
+  'layout/health-template',
+  'layout/help-template';
 
 // 5. Components
 @import
