Pages were added

--- a/app/scss/abstracts/_variables.scss
+++ b/app/scss/abstracts/_variables.scss
@@ -17,6 +17,7 @@ $primary-850: #FAF9F9;
 $primary-800: #CED3EB;
 $secondary: #F28314;
 $secondary-900: #EDE2D8;
+$secondary-930: #FDFAF8;
 $secondary-950: #F2ECE7;
 $dark: #4E3434;
 $dark-700: #6E6161;
