About page was added

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -110,7 +110,9 @@ $utilities: map-get-multiple(
   'layout/template',
   'layout/health-template',
   'layout/help-template',
-  'layout/contact-template';
+  'layout/contact-template',
+  'layout/about-template',
+  'layout/docs-section';
 
 // 5. Components
 @import
