Get help page was added

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -113,7 +113,9 @@ $utilities: map-get-multiple(
   'layout/contact-template',
   'layout/about-template',
   'layout/docs-section',
-  'layout/news-template';
+  'layout/news-template',
+  'layout/get-help-template',
+  'layout/mission-section';
 
 // 5. Components
 @import
