Changes were added

--- a/app/scss/components/_media-swiper.scss
+++ b/app/scss/components/_media-swiper.scss
@@ -29,4 +29,11 @@ $media-swiper-img-br: 10px;
     &__img {
         border-radius: $media-swiper-img-br;
     }
+    &__instance {
+        &.swiper-3d {
+            & .swiper-slide-shadow {
+                display: none;
+            }
+        }
+    }
 }
