--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -53,9 +53,8 @@ $form-input-br: 8px;
         }
     }
     &__radio {
-        width: 95px;
+        width: 92.5px;
         height: 60px;
-        flex: 1 1 auto;
         margin-right: 15px;
         margin-bottom: 25px;
         &:nth-child(3n) {
@@ -64,8 +63,7 @@ $form-input-br: 8px;
     }
     &__value {
         &-input {
-            flex: 1 1 auto;
-            width: auto;
+            width: calc(100% - 92.5px - 15px);
             text-align: center;
             &::-webkit-input-placeholder {
                 font-weight: 500;
